# Cogitarelink

./: CLAUDE.md  README.md  baseline_results.json  pyproject.toml  test_mfn2_research.py  test_refactored_tools.py
.cogitarelink/: session.json
archive/cli_old/: cl_discover.py  cl_follow.py  cl_materialize.py  cl_resolve.py  cl_sparql.py  cl_wikidata.py  discover.py
archive/intelligence/: guidance_generator.py
archive/memory/: __init__.py
archive/reason/: __init__.py
archive/testing/: __init__.py
archive/tests_old/: practical_llm_test.py  test_cl_resolve.py
archive/tests_old/integration/: test_wikidata_workflow.py
archive/tests_old/interactive/: __init__.py
archive/tests_old/unit/cli/: test_materialize.py
archive/unused_modules/adapters/: wikidata_client.py
archive/unused_modules/prompts/: __init__.py
archive/unused_modules/tools/: __init__.py
archive/unused_modules/vocab/: __init__.py  composer.py  registry.py
cogitarelink/: __init__.py
cogitarelink/adapters/: __init__.py  multi_sparql_client.py  unified_sparql_client.py  wikidata_client.py
cogitarelink/backend/: __init__.py  cache.py  content.py  properties.py  sparql.py
cogitarelink/cli/: __init__.py  cl_ask.py  cl_construct.py  cl_context.py  cl_describe.py  cl_discover.py  cl_discover_patterns.py  cl_entity.py  cl_fetch.py  cl_follow.py  cl_lens.py  cl_materialize.py  cl_ontfetch.py  cl_property.py  cl_query.py  cl_resolve.py  cl_search.py  cl_select.py  cl_sparql.py  cl_wikidata.py  cogitarelink.py  rdf_cache.py  rdf_get.py  wikidata.py
cogitarelink/config/: __init__.py
cogitarelink/core/: __init__.py  cache.py  debug.py  discovery_infrastructure.py  entity.py  external_ids.py  metadata_validation.py  universal_identifier_discovery.py
cogitarelink/data/system/: obqc.ttl  rules.ttl
cogitarelink/discovery/: __init__.py  base.py  cache_manager.py  semantic_classifier.py  universal.py
cogitarelink/intelligence/: __init__.py  discovery_engine.py  discovery_orchestrator.py  discovery_patterns.py  guidance_generator.py  ontology_discovery.py  response_manager.py  schema_discovery.py
cogitarelink/patterns/: README.md  __init__.py  event_capture.py  pattern_storage.py  reminder_system.py  tool_integration.py
cogitarelink/patterns/use_cases/: cl_construct_development_session_summary.md  example_biology_session.md  session_2024_06_18_cl_construct_vocabulary_mapping.md  session_2024_06_18_dbpedia_discovery_workflow.md  template.md  wikidata_property_entity_discovery.md
cogitarelink/prompts/: core_patterns.py  instruction_generator.py
cogitarelink/simple/: __init__.py  cli.py  client.py  context.py  scaffolds.py  tools.py
cogitarelink/teaching/: __init__.py
cogitarelink/utils/: __init__.py
cogitarelink/validation/: __init__.py  error_formatters.py  schemas.py  validators.py
cogitarelink/verify/: __init__.py
cogitarelink/vocab/: __init__.py  collision.py
docs/: COMPREHENSIVE_DOCUMENTATION.md  TECHNICAL_ARCHITECTURE.md  TOOLS.md  cli_tool_evaluation.md
docs/cc-arch/: multi-agent-research.txt
docs/old-docs/: NEW_COGITARELINK_ARCHITECTURE.md  SYNTHESIS_TASK_LIST.md  science_data_assistant.md
llmstxt/: anthropic_cc_hooks.md  anthropic_cc_slash.md  claude_code_sdk.txt
llmstxt/multi-agent/: multi-agent.txt
reasoningbank/: README.md
scripts/: dev.py
tests/: __init__.py  conftest.py  test_cache_manager.py  test_cl_search_universal_discovery.py  test_cli_tools.py  test_cogitarelink_entry.py  test_discovery_base.py  test_discovery_infrastructure.py  test_dynamic_discovery_live.py  test_dynamic_external_id_discovery.py  test_enhanced_cl_search.py  test_error_handling.py  test_integration.py  test_metadata_validation.py  test_output_formats.py  test_real_validation_integration.py  test_setup.py  test_universal_cross_domain_integration.py  test_universal_identifier_discovery.py
tests/evaluation/: llm_materialize_evaluation.py
tests/experimental/: 01_baseline_profiling.py  02_test_improved_discover.py  03_test_cl_lens.py  04_final_demonstration.py  05_container_workflows.py  test_harness.py
tests/integration/: test_cli_materialize.py  test_cross_reference_reality.py  test_dynamic_discovery.py  test_dynamic_vs_hardcoded.py  test_entity_known_pathway.py  test_external_id_discovery.py  test_ontology_dereferencing.py  test_property_affordance_pathway.py  test_property_discovery.py  test_wikipathways_workflow.py
tests/unit/cli/: test_materialize_llm_interpretation.py
tests/unit/core/: test_entity.py
